base/myapp-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: <AWS 계정 ID>.dkr.ecr.ap-northeast-2.amazonaws.com/my-app:c7edd698
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
