base/myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
